auto-test/tests/chapter_16/invalid_types/extra_credit/switch_on_string.c

int main(void) {
    switch ("foo") {
        default:
        return 0;
    }
}